k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rafeeq
  labels:
    app: rafeeq
    version: v2.3.0
